--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Megrim&family=Raleway&display=swap');
+
+
 *{
     padding: 0;
     margin: 0;
@@ -5,16 +8,45 @@
   }
   
   body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     height: 100vh;
     background: #f2f2e8;
   }
+
+  strong{
+    font-size: 25px;
+    font-weight: 500;
+  }
+
+  header{
+    height:5vh;
+    width: 100%;
+    display:flex;
+    flex-direction: column;
+    position: relative;
+    margin: 10px 10px;
+  }
+  header > img{
+    height: auto;
+    max-width: 100px;
+    margin-bottom: 5px;
+  }
+
+  .name{
+    fill: 
+  }
   
+  .content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    height: 85vh;
+  }
+
   .heading {
     position: relative;
-    font: 500 100px 'Megrim';
+    font: 500 100px 'Megrim', cursive;
     line-height: 150px;
     text-align: center;
     letter-spacing: 1px;
@@ -56,13 +88,13 @@
   }
   
   .site-name{
-    margin: 20px 0;
+    margin: 10px 0;
   }
   
   .site-name > * {
     text-align: center;
     display: block;
-    font-family: "Raleway";
+    font-family: 'Raleway', sans-serif;
     margin: 10px 0;
   }
   
@@ -72,13 +104,32 @@
     font-weight: 200;
   }
   
-  strong{
-    font-size: 25px;
-    font-weight: 500;
+  .icon-set a > i{
+    font-size: 40px;
+    cursor: pointer;
+    margin-top: 15px;
+    margin-right: 5px;
+    transition: opacity 0.3s;
+  }
+
+  .icon-set a > i:hover{
+    opacity: 0.7;
+  }
+
+  
+  .footer {
+    text-align: center;
+    position:absolute;
+    bottom: 0;
   }
   
+  /* .icon svg{
+      height: auto;
+      width: 100%;
+  } */
+  
   .contact {
-    font-family: "Raleway";
+    font-family: 'Raleway', sans-serif;
     font-size: 1.5em;
     display: flex;
     flex-direction: row;
@@ -89,25 +140,17 @@
     display: flex;
     align-items: flex-end;
     margin-bottom: 15px;
+    transition: transform 250ms;
   }
-  
-  
-  .footer {
-    text-align: center;
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
+
+  .contact > a:hover{
+    transform: translateY(-10px);
   }
-  
-  /* .icon svg{
-      height: auto;
-      width: 100%;
-  } */
+
   
   @media screen and (max-width: 767px) and (min-width: 601px) {
     .heading{
-      font: 500 60px 'Megrim';
+      font: 500 60px 'Megrim', cursive;
       line-height: 80px;
     }
     .site-name > h2 {
@@ -123,7 +166,7 @@
   
   @media (max-width: 600px) {
     .heading {
-      font: 500 45px 'Megrim';
+      font: 500 45px 'Megrim', cursive;
       line-height: 70px;
     }
     .site-name > h2 {
